--- a/app/src/main/res/layout/activity_cricket_players.xml
+++ b/app/src/main/res/layout/activity_cricket_players.xml
@@ -27,6 +27,7 @@
         android:id="@+id/recyclerViewPlayers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="48dp"
         android:contentDescription="List of cricket players"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
